--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,8 @@
+package-lock.json
+Example.md
+thing.md
+INSTRUCTIONS.md
 # See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
-
 # dependencies
 /node_modules
 /.pnp
